Fix iframe overflow issue
The iframe for Square Appointments was causing double scrollbars in
some browsers. Hopefully this change resolves the problem.

--- a/index.css
+++ b/index.css
@@ -197,8 +197,8 @@ iframe {
   background: white;
   border: none;
   height: 100%;
-  margin-bottom: -5px; /* 1 */
-  padding-top: 3rem; /* 2 */
+  margin-bottom: -0.5rem; /* 1 */
+  padding-top: 2.5rem; /* 2 */
   width: 100%;
 }
 
